--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,31 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
+
 		{
 		"type": "cppdbg",
 		"request": "launch",
-		"name": "test",
+		"name": "test 42",
 		"program": "/nfs/homes/jecarval/Common Core/minishell/minishell",
 		"args": [],
 		"cwd": "/nfs/homes/jecarval/Common Core/minishell",
+		},
+		{
+			"type": "cppdbg",
+			"request": "launch",
+			"name": "test home",
+			"program": "/homes/tpinto-e/common_core/minishell/minishell",
+			"args": [],
+			"cwd": "/homes/tpinto-e/common_core/minishell",
+		},
+		{
+			"type": "cppdbg",
+			"request": "launch",
+			"name": "function test home",
+			"program": "/nfs/homes/tpinto-e/common_core/minishell/src/parsing/a.out",
+			"args": [],
+			"cwd": "/nfs/homes/tpinto-e/common_core/minishell/src/parsing",
+			
 		},
 	]
 }
