--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,17 @@
 		"type": "cppdbg",
 		"request": "launch",
 		"name": "test 42",
-		"program": "/nfs/homes/jecarval/Common Core/minishell/minishell",
-		"args": [],
-		"cwd": "/nfs/homes/jecarval/Common Core/minishell",
+		"program": "/usr/bin/valgrind",
+		"args": ["/nfs/homes/ade-barr/minishell/minishell"],
+		"cwd": "/nfs/homes/ade-barr/minishell",
+		},
+		{
+			"type": "cppdbg",
+			"request": "launch",
+			"name": "test 42 sanitize",
+			"program": "/nfs/homes/ade-barr/minishell/minishell",
+			"args": [],
+			"cwd": "/nfs/homes/ade-barr/minishell",
 		},
 		{
 			"type": "cppdbg",
