--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,14 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
+
 		{
 			"type": "cppdbg",
 			"request": "launch",
 			"name": "minishell",
-			"program": "/home/ren/minishell/minishell",
+			"program": "/home/jess/42/minishell/minishell",
 			"args": [],
-			"cwd": "/home/ren/minishell",
+			"cwd": "/home/jess/42/minishell",
 		},
 		{
 			"type": "cppdbg",
